@@ -1,3 +1,8 @@
+2013-07-30 Juan Manuel Ramon <juanmanuel.ramon@artica.es>
+
+	* operation/events/events_list.php: Fix user filter in
+	event list view.
+
 2013-07-30  Sergio Martin <sergio.martin@artica.es>
 
 	* godmode/groups/group_list.php: Fix pagination on
